language/tests/error/InvalidAssignmentInAssignment.hashem
bebin azinja() {
  x = 42 = 42;
}
